# tgbot_c-

./: .gitignore  AD.txt  CMakeLists.txt  README.MD  encryptor.cpp  env.bat  main.cpp  redis.lua  run.sh  start.sh
src/: bot_config.cpp  bot_util.cpp  cryptor.cpp  plugin.cpp  tgbot.cpp
src/handler/: authorization_state.cpp  chat.cpp  dispath.cpp  handler.cpp  update_option.cpp  user.cpp
src/handler/include/: authorization_state.h  chat.h  dispath.h  handler.h  noop_handler.h  update_option.h  user.h
src/include/: bot_config.h  bot_util.h  cryptor.h  plugin.h  stdext.h  tg.h  tgbot.h  thread_pool.h
src/orc/: qr_code_generator.cpp
src/orc/include/: qr_code_generator.h
src/plugins/: bot_plugin.cpp  user_plugin.cpp
src/plugins/command/: command.cpp
src/plugins/command/include/: command.h
src/plugins/include/: bot_plugin.h  user_plugin.h
src/redis/: redis_utils.cpp
src/redis/include/: redis_utils.h
